# L-slip-a5toa4

./: .gitignore  README.md  build.py  main.py  pyproject.toml
src/a5toa4/: core.py
src/a5toa4/qtfront/: app.py
tests/: .gitignore  test_core.py
tests/testfiles/A5_horizontal_tikz/: main.tex
